# pdf-tool

./: .gitignore  README.md  label_pdf.py  main.py  process_doc.py  process_pdf.py  pyproject.toml  requirements.txt
.github/workflows/: package.yml
.kiro/specs/document-processor-gui/: design.md  requirements.md  tasks.md
config/: default_config.json
config/languages/: en.json  zh.json
document_processor_gui/: __init__.py  main.py
document_processor_gui/backend/: __init__.py  conversion_backend.py  file_service.py  ghostscript_installer.py  ghostscript_wrapper.py  libreoffice_installer.py  libreoffice_wrapper.py  pdf_labeler.py  word_converter.py
document_processor_gui/config/: __init__.py  config_manager.py  exceptions.py
document_processor_gui/core/: __init__.py  application_controller.py  error_handler.py  exceptions.py  language_manager.py  validation.py
document_processor_gui/gui/: __init__.py  components.py  dialogs.py  main_window.py  preview.py
document_processor_gui/processing/: __init__.py  batch_processor.py  compression_engine.py  conversion_engine.py  labeling_engine.py  models.py
document_processor_gui/resources/: app_icon.icns  app_icon_compression.icns
packaging/: DocumentProcessor.spec  build.py  generate_icns.py
tests/: __init__.py  test_application_controller.py  test_backend_properties.py  test_backend_services.py  test_config_manager.py  test_config_properties.py  test_error_handling.py  test_error_properties.py  test_language_manager.py  test_language_properties.py  test_processing_properties.py
